LibVlcSharp/Generated/libvlc_media_player.cs


            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_get_channel")]
            internal static extern int LibvlcAudioGetChannel(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_set_channel")]
            internal static extern int LibvlcAudioSetChannel(global::System.IntPtr p_mi, int channel);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_get_delay")]
            internal static extern long LibvlcAudioGetDelay(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_set_delay")]
            internal static extern int LibvlcAudioSetDelay(global::System.IntPtr p_mi, long i_delay);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_get_preset_count")]
            internal static extern uint LibvlcAudioEqualizerGetPresetCount();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_get_preset_name")]
            internal static extern global::System.IntPtr LibvlcAudioEqualizerGetPresetName(uint u_index);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_get_band_count")]
            internal static extern uint LibvlcAudioEqualizerGetBandCount();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_get_band_frequency")]
            internal static extern float LibvlcAudioEqualizerGetBandFrequency(uint u_index);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_new")]
            internal static extern global::System.IntPtr LibvlcAudioEqualizerNew();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_new_from_preset")]
            internal static extern global::System.IntPtr LibvlcAudioEqualizerNewFromPreset(uint u_index);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_release")]
            internal static extern void LibvlcAudioEqualizerRelease(global::System.IntPtr p_equalizer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_set_preamp")]
            internal static extern int LibvlcAudioEqualizerSetPreamp(global::System.IntPtr p_equalizer, float f_preamp);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_get_preamp")]
            internal static extern float LibvlcAudioEqualizerGetPreamp(global::System.IntPtr p_equalizer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_set_amp_at_index")]
            internal static extern int LibvlcAudioEqualizerSetAmpAtIndex(global::System.IntPtr p_equalizer, float f_amp, uint u_band);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_audio_equalizer_get_amp_at_index")]
            internal static extern float LibvlcAudioEqualizerGetAmpAtIndex(global::System.IntPtr p_equalizer, uint u_band);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_set_equalizer")]
            internal static extern int LibvlcMediaPlayerSetEqualizer(global::System.IntPtr p_mi, global::System.IntPtr p_equalizer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_get_role")]
            internal static extern int LibvlcMediaPlayerGetRole(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_set_role")]
            internal static extern int LibvlcMediaPlayerSetRole(global::System.IntPtr p_mi, uint role);
        }

        /// <summary>Create an empty Media Player object</summary>
        /// <param name="p_libvlc_instance">
        /// <para>the libvlc instance in which the Media Player</para>
        /// <para>should be created.</para>
        /// </param>
        /// <returns>a new media player object, or NULL on error.</returns>
        public static global::VideoLAN.LibVLC.Generated.MediaPlayer LibvlcMediaPlayerNew(global::VideoLAN.LibVLC.Generated.Instance p_libvlc_instance)
        {
            var __arg0 = ReferenceEquals(p_libvlc_instance, null) ? global::System.IntPtr.Zero : p_libvlc_instance.__Instance;
            var __ret = __Internal.LibvlcMediaPlayerNew(__arg0);
            global::VideoLAN.LibVLC.Generated.MediaPlayer __result0;
            if (__ret == IntPtr.Zero) __result0 = null;
            else if (global::VideoLAN.LibVLC.Generated.MediaPlayer.NativeToManagedMap.ContainsKey(__ret))
                __result0 = (global::VideoLAN.LibVLC.Generated.MediaPlayer) global::VideoLAN.LibVLC.Generated.MediaPlayer.NativeToManagedMap[__ret];
            else __result0 = global::VideoLAN.LibVLC.Generated.MediaPlayer.__CreateInstance(__ret);
            return __result0;
        }

        /// <summary>Create a Media Player object from a Media</summary>
        /// <param name="p_md">
        /// <para>the media. Afterwards the p_md can be safely</para>
        /// <para>destroyed.</para>
        /// </param>
        /// <returns>a new media player object, or NULL on error.</returns>
        public static global::VideoLAN.LibVLC.Generated.MediaPlayer LibvlcMediaPlayerNewFromMedia(global::VideoLAN.LibVLC.Generated.Media p_md)
        {
            var __arg0 = ReferenceEquals(p_md, null) ? global::System.IntPtr.Zero : p_md.__Instance;
            var __ret = __Internal.LibvlcMediaPlayerNewFromMedia(__arg0);
            global::VideoLAN.LibVLC.Generated.MediaPlayer __result0;
            if (__ret == IntPtr.Zero) __result0 = null;
            else if (global::VideoLAN.LibVLC.Generated.MediaPlayer.NativeToManagedMap.ContainsKey(__ret))
                __result0 = (global::VideoLAN.LibVLC.Generated.MediaPlayer) global::VideoLAN.LibVLC.Generated.MediaPlayer.NativeToManagedMap[__ret];
            else __result0 = global::VideoLAN.LibVLC.Generated.MediaPlayer.__CreateInstance(__ret);
            return __result0;
        }

        /// <summary>
        /// <para>Release a media_player after use</para>
        /// <para>Decrement the reference count of a media player object. If the</para>
        /// <para>reference count is 0, then libvlc_media_player_release() will</para>
        /// <para>release the media player object. If the media player object</para>
        /// <para>has been released, then it should not be used again.</para>
        /// </summary>
        /// <param name="p_mi">the Media Player to free</param>
        public static void LibvlcMediaPlayerRelease(global::VideoLAN.LibVLC.Generated.MediaPlayer p_mi)
        {
            var __arg0 = ReferenceEquals(p_mi, null) ? global::System.IntPtr.Zero : p_mi.__Instance;
            __Internal.LibvlcMediaPlayerRelease(__arg0);
        }

        /// <summary>
        /// <para>Retain a reference to a media player object. Use</para>
        /// <para>libvlc_media_player_release() to decrement reference count.</para>
        /// </summary>
        /// <param name="p_mi">media player object</param>
        public static void LibvlcMediaPlayerRetain(global::VideoLAN.LibVLC.Generated.MediaPlayer p_mi)
        {
            var __arg0 = ReferenceEquals(p_mi, null) ? global::System.IntPtr.Zero : p_mi.__Instance;
            __Internal.LibvlcMediaPlayerRetain(__arg0);
        }

        /// <summary>
        /// <para>Set the media that will be used by the media_player. If any,</para>
        /// <para>previous md will be released.</para>
        /// </summary>
        /// <param name="p_mi">the Media Player</param>
        /// <param name="p_md">
        /// <para>the Media. Afterwards the p_md can be safely</para>
        /// <para>destroyed.</para>
        /// </param>
        public static void LibvlcMediaPlayerSetMedia(global::VideoLAN.LibVLC.Generated.MediaPlayer p_mi, global::VideoLAN.LibVLC.Generated.Media p_md)
        {
            var __arg0 = ReferenceEquals(p_mi, null) ? global::System.IntPtr.Zero : p_mi.__Instance;
            var __arg1 = ReferenceEquals(p_md, null) ? global::System.IntPtr.Zero : p_md.__Instance;
            __Internal.LibvlcMediaPlayerSetMedia(__arg0, __arg1);
        }

        /// <summary>Get the media used by the media_player.</summary>
        /// <param name="p_mi">the Media Player</param>
        /// <returns>
        /// <para>the media associated with p_mi, or NULL if no</para>
        /// <para>media is associated</para>
        /// </returns>
        public static global::VideoLAN.LibVLC.Generated.Media LibvlcMediaPlayerGetMedia(global::VideoLAN.LibVLC.Generated.MediaPlayer p_mi)
        {
            var __arg0 = ReferenceEquals(p_mi, null) ? global::System.IntPtr.Zero : p_mi.__Instance;
            var __ret = __Internal.LibvlcMediaPlayerGetMedia(__arg0);
            global::VideoLAN.LibVLC.Generated.Media __result0;
            if (__ret == IntPtr.Zero) __result0 = null;
            else if (global::VideoLAN.LibVLC.Generated.Media.NativeToManagedMap.ContainsKey(__ret))
                __result0 = (global::VideoLAN.LibVLC.Generated.Media) global::VideoLAN.LibVLC.Generated.Media.NativeToManagedMap[__ret];
            else __result0 = global::VideoLAN.LibVLC.Generated.Media.__CreateInstance(__ret);
            return __result0;
        }
